# HoaLibrary-Max

./: .gitignore  BUILD.md  CMakeLists.txt  CREDITS_AND_LICENSING.md  ENABLE_GITHUB_PAGES.md  HOW_TO_RELEASE.md  PROJECT_ANALYSIS.md  QUICK_RELEASE.md  README.md  RELEASE_NOTES.md  RELEASE_STRATEGY.md  RELEASE_SUMMARY.md  create_release.sh  hoa.max.h  install.sh
.github/workflows/: README.md  release.yml
MaxCommon/: hoa.map_gui.cpp  hoa.process_tilde.cpp
Package/HoaLibrary/: COPYRIGHT.txt  README.txt  package-info.json
docs/: API_REFERENCE.md  BUILD_STATUS.md  CODE_AUDIT_SUMMARY.md  INSTALLATION.md  OBJECTS.md  OPTIMIZATION_GUIDE.md  README.md  TECHNICAL_AUDIT.md  _config.yml  examples.md  getting-started.md  index.md  references.md  what-is-hoa.md
docs/_layouts/: default.html
docs/api/: API_REFERENCE.md
docs/assets/css/: style.scss
docs/guides/: CPP_REFRESHER.md  getting-started.md  tutorials.md
docs/knowledge_base/: abisonics_knowledge_base.md  index.md  practical_implementation_guide_ambisonics.md  quick_refs.md  spacial_granular_synthesis.md
docs/legacy/: INSTALLATION.md  context.md
docs/reference/: ARCHITECTURE.md
docs/theory/: what-is-hoa.md
